--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,9 +1,23 @@
 = bootstrap_form_for(@user, as: :user ,  html:{'data-toggle': 'validator'}) do |f|
   .row
-    .col-md-6
-      = f.text_field :name, label: set_icon_helper('Nombre / Razón Social*', 'user'), autocomplete: 'name', required: 'required'
-    .col-md-6
-      = f.text_field :identification, label: set_icon_helper('Cedula / Nit *', 'address-card'), autocomplete: 'identification', required: 'required'
+    .col-md-3
+      - if @user.new_record?
+        = f.select :roles, options_for_select([['Cliente', 'customer'], ['Empleado', 'employee'], ['Administrador', 'admin']], (@user.roles.first.name unless @user.new_record?) ), { label: set_icon_helper('Tipo de usuario *', 'users')}, {required: 'required', id: 'customer_select'}
+      - else
+        = f.select :roles, options_for_select([['Cliente', 'customer'], ['Empleado', 'employee'], ['Administrador', 'admin']], (@user.roles.first.name unless @user.new_record?) ), { label: set_icon_helper('Tipo de usuario *', 'users')}, {required: 'required', id: 'customer_select', disabled: true}
+        = f.hidden_field :roles, value: @user.roles.first.name
+    #customer-form
+      .col-md-3
+        = f.text_field :name, label: set_icon_helper('Razón Social*', 'user'), autocomplete: 'name', required: 'required'      
+      .col-md-3
+        = f.text_field :identification, label: set_icon_helper('Nit del cliente *', 'address-card'), autocomplete: 'identification', required: 'required'
+      .col-md-3
+        = f.text_field :contact_name, label: set_icon_helper('Nombre del representante *', 'user')
+    #other-user-form
+      .col-md-5
+        = f.text_field :name, label: set_icon_helper('Nombre *', 'user'), autocomplete: 'name', required: 'required'
+      .col-md-4
+        = f.text_field :identification, label: set_icon_helper('Cedula *', 'address-card'), autocomplete: 'identification', required: 'required'
     .col-md-6
       = f.email_field :email, label: set_icon_helper('Correo Electronico *', 'envelope'), autocomplete: 'email', required: 'required'
     .col-md-6
@@ -11,21 +25,8 @@
     .col-md-12
       = f.text_area :address, label:  set_icon_helper('Dirección *', 'home'), autocomplete: 'address', required: 'required'
     .col-md-6
-      = f.select :roles, options_for_select([['Cliente', 'customer'], ['Empleado', 'employee'], ['Administrador', 'admin']], (@user.roles.first.name unless @user.new_record?) ), { label: set_icon_helper('Tipo de usuario *', 'users')}, {required: 'required', id: 'customer_select'}
-    .col-md-6
       = f.form_group :active, label: { text: set_icon_helper('¿Desea activar al usuario?', 'question-circle') } do
         = f.check_box :active, label: 'Activar', class: 'i-checks'
-    #customer-form
-      .col-md-12
-        .hr-line-dashed
-      .col-sm-12.b-r
-        %h3.m-t-none.m-b Datos del representante del cliente
-      .col-md-6
-        = f.text_field :contact_name, label: set_icon_helper('Nombre *', 'user')
-      .col-md-6
-        = f.email_field :contact_email, autocomplete: 'contact_email', label: set_icon_helper('Correo Electronico *', 'envelope')
-      .col-md-6
-        = f.text_field :contact_phone, autocomplete: 'contact_phone', label: set_icon_helper('Telefono/Celular *', 'phone')
     .col-md-12
       .hr-line-dashed
     .col-md-12.align-right
