--- a/app/views/inventories/_short_form.html.haml
+++ b/app/views/inventories/_short_form.html.haml
@@ -14,9 +14,9 @@
             / .col-md-4
             /   = f.text_field :identification, label: set_icon_helper('Identificación *', 'i-card'), required: 'required'
             .col-md-8
-              = f.select :product_id, Product.all.collect {|p| [ product_name(p), p.id ] }, { label: set_icon_helper('Producto *', 'tag')}, {required: 'required', include_blank: true }
+              = f.select :product_id, Product.all.collect {|p| [ product_name(p).upcase, p.id ] }, { label: set_icon_helper('Producto *', 'tag')}, {required: 'required', include_blank: true , class: 'selectize'}
             .col-md-4
-              = f.select :container_id, Container.all.order(id: :asc).collect {|p| [ p.code, p.id ] }, { label: set_icon_helper('Contenedor ', 'train') }, { required: 'required', include_blank: true}
+              = f.select :container_id, Container.all.order(id: :asc).collect {|p| [ p.code.upcase, p.id ] }, { label: set_icon_helper('Contenedor ', 'train') }, { required: 'required', include_blank: true, class: 'selectize'}
             .col-md-4
               = f.number_field :total_of_packages, label: set_icon_helper('Cantidad de paquetes *', 'pie-chart'), required: 'required', autocomplete: 'off'
             .col-md-4
