--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -169,15 +169,8 @@
   }
 }
 
-.footer{
-  .flex{
-    top: 30px;
-    text-align: right;
-    z-index: 9999; 
-    *{
-      font-size: 12px;
-    }
-  }
+.header{
+  margin-top: 40px;
 }
 
 
