--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -19,7 +19,7 @@
     .row.pd-50
       .col-sm-3.vd
         %strong
-          = 'PLANILLA DE DESPACHO #'
+          = 'PLANILLA #'
         %br
         %strong.text-navy
           - if @dispatch.code.to_s.size < 5
