Peso bruto a peso total

--- a/app/views/dispatch_products/_products_list.html.haml
+++ b/app/views/dispatch_products/_products_list.html.haml
@@ -24,7 +24,7 @@
               Unidades
           %td{title: 'Peso bruto despachado.'}
             %strong
-              Peso bruto (Kg)
+              Peso total (Kg)
           %td{title: 'Paquetes disponibles'}
             %strong
               Paquetes disponibles
