--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -119,7 +119,7 @@
           %th{:scope => "col", style:'text-align: center;'} UNIDADES POR PAQUETE
           %th{:scope => "col", style:'text-align: center;'} TOTAL UNIDADES
           %th{:scope => "col", style:'text-align: center;'} PESO NETO (KG)
-          %th{:scope => "col", style:'text-align: center;'} PESO BRUTO (KG)
+          %th{:scope => "col", style:'text-align: center;'} PESO TOTAL (KG)
       %tbody
         - total_paquetes = 0
         - total_unidades = 0
