--- a/app/views/inventories/_inventories_list.html.haml
+++ b/app/views/inventories/_inventories_list.html.haml
@@ -30,7 +30,7 @@
               Peso neto (Kg)
           %td{title: 'Peso bruto'}
             %strong
-              Peso bruto (Kg)
+              Peso total (Kg)
           %td{title: 'Opciones'}
             %strong
               Opciones
