bodega de origen

--- a/app/views/dispatches/_dispatches_list.html.haml
+++ b/app/views/dispatches/_dispatches_list.html.haml
@@ -26,10 +26,7 @@
           %tr
             %td{title: 'Codigo del despacho'}
               %a.client-link{href: edit_dispatch_path(dispatch)}
-                - if dispatch.code.to_s.size < 5
-                  = sprintf '%05d', dispatch.code
-                - else
-                  = dispatch.code
+                = sprintf '%05d', dispatch.id
             %td{title: 'Fecha del despacho'}
               = l(dispatch.date, format: '%B %d, %Y')
             %td{title: 'Ciudad del despacho'}
