--- a/app/views/imports/_form.html.haml
+++ b/app/views/imports/_form.html.haml
@@ -8,8 +8,10 @@
       = f.text_field :date, label: set_icon_helper('Fecha de ingreso *', 'calendar'), required: 'required', class: 'datepicker', 'data-provide': 'datepicker', autocomplete: 'off'
     .col-md-4
       = f.text_field :importer, label: set_icon_helper('Destinatario o importador *', 'user'),  required: 'required'
+    .col-md-4
+      = f.text_field :warehose_origin, label: set_icon_helper('Bodega de origen', 'industry')
     - unless @import.new_record?
-      .col-md-8
+      .col-md-4
         = f.text_area :description, label: set_icon_helper('Observaciones ', 'comment-o')
     .col-md-12
       .hr-line-dashed
