numero de despacho fue movido

--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -14,7 +14,8 @@
           STCARGA
       .col-md-2
         .orange-color
-          = "##{sprintf '%05d', @dispatch.id}"
+          %strong
+            = "##{sprintf '%05d', @dispatch.id}"
     .row
       .orange.mt-200.mb-30
         %span
