--- a/app/views/dispatch_products/_products_list.html.haml
+++ b/app/views/dispatch_products/_products_list.html.haml
@@ -39,7 +39,7 @@
             %td{title: 'Referencia del producto'}
               = product.import_product.product.reference
             %td{title: 'Contenedor.'}
-              = product.import_product.container.code
+              = product.import_product.container.code.upcase
             %td{title: 'Unidades por paquete'}
               = product.import_product.unit_by_package
             %td{title: 'Cantidad de paquetes despachados.'}
