--- a/app/views/imports/index.html.haml
+++ b/app/views/imports/index.html.haml
@@ -6,8 +6,9 @@
           .col-md-9.no-padding
             %h2 Lista de importaciones
         = smart_listing_controls_for(:imports) do
+          = select :filter, 'type', options_for_select(imports_filter, 'code'), { label: set_icon_helper('', '')}, {class: 'input form-control  form-control-inline'}
           .input-group.filter.mb-7
-            %input.input.form-control{:placeholder => 'Buscar importación...', type: 'text', name: 'filter'}/
+            %input.input.form-control{:placeholder => 'Buscar importación...', type: 'text', name: 'filter[text]'}/
             %span.input-group-btn
               - if @user.present?
                 %button.btn.btn-white{onclick: 'open_modal("#new_import")', type:'button'}
